--- a/modd.conf
+++ b/modd.conf
@@ -4,7 +4,7 @@ src/** {
 index.html {
     prep: cp index.html dist/index.html
 }
-style/rechnung.css {
+style/goban.css {
     prep: cp style/goban.css dist/goban.css
 }
 
