refactor: updated modd conf

--- a/modd.conf
+++ b/modd.conf
@@ -1,11 +1,12 @@
-src/** {
+src/**/*.elm {
+    prep: elm-format @mods --yes
     prep: elm make src/Main.elm --output=dist/goban.js
 }
 index.html {
     prep: cp index.html dist/index.html
 }
-style/rechnung.css {
-    prep: cp style/goban.css dist/goban.css
+style/**/*.css {
+    prep: cp @mods dist/
 }
 
 dist/** {
