--- a/modd.conf
+++ b/modd.conf
@@ -1,6 +1,11 @@
 src/**/*.elm {
     prep: elm-format @mods --yes
     prep: elm make src/Main.elm --output=dist/goban.js
+    prep: elm-test
+}
+
+tests/**/*.elm {
+    prep: elm-test
 }
 index.html {
     prep: cp index.html dist/index.html
