refactor: test them all

--- a/modd.conf
+++ b/modd.conf
@@ -1,12 +1,9 @@
-src/**/*.elm {
+src/**/*.elm, src/**/*.elm tests/**/*.elm {
     prep: elm-format @mods --yes
     prep: elm make src/Main.elm --output=dist/goban.js
     prep: elm-test
 }
 
-tests/**/*.elm {
-    prep: elm-test
-}
 index.html {
     prep: cp index.html dist/index.html
 }
