feature: minor styling things and pwa

--- a/modd.conf
+++ b/modd.conf
@@ -1,4 +1,4 @@
-src/**/*.elm, src/**/*.elm tests/**/*.elm {
+src/**/*.elm tests/**/*.elm {
     prep: elm-format @mods --yes
     prep: elm make src/Main.elm --output=dist/goban.js
     prep: elm-test
@@ -9,6 +9,9 @@ index.html {
 }
 style/**/*.css {
     prep: cp @mods dist/
+}
+assets/**/* {
+    prep: mkdir -p dist/assets && cp @mods dist/assets/
 }
 
 dist/** {
