feature: action cable

--- a/modd.conf
+++ b/modd.conf
@@ -4,14 +4,29 @@ src/**/*.elm tests/**/*.elm {
     prep: elm-test
 }
 
-index.html {
-    prep: cp index.html dist/index.html
+src/**/*.elm {
+    prep: ./optimize.sh src/Main.elm 
 }
+
+index.html {
+    prep: cp index.html dist/index.tmp.html
+    prep: sed -f config/development.sed dist/index.tmp.html > dist/index.html
+    prep: rm dist/index.tmp.html
+}
+
+index.html {
+    prep: cp index.html build/index.tmp.html
+    prep: sed -f config/production.sed build/index.tmp.html > build/index.html
+    prep: rm build/index.tmp.html
+}
+
 style/**/*.css {
     prep: cp @mods dist/
+    prep: cp @mods build/
 }
 assets/**/* {
     prep: mkdir -p dist/assets && cp @mods dist/assets/
+    prep: mkdir -p build/assets && cp @mods build/assets/
 }
 
 dist/** {
