--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
    "scripts": {
-      "start": "snowpack dev",
-      "build": "snowpack build",
+      "start": "NODE_ENV=development snowpack dev",
+      "build:dist": "snowpack build",
       "test": "echo \"This template does not include a test runner by default.\" && exit 1",
       "format": "prettier --write \"src/**/*.js\"",
       "lint": "prettier --check \"src/**/*.js\""
    },
    "devDependencies": {
-      "@snowpack/plugin-dotenv": "^2.0.4",
+      "@snowpack/plugin-run-script": "^2.2.0",
       "prettier": "^2.0.5",
-      "snowpack": "^2.17.0"
+      "snowpack": "^2.17.0",
+      "snowpack-plugin-elm": "^0.4.0",
+      "snowpack-plugin-replace": "^1.0.4"
    },
    "dependencies": {
       "actioncable": "^5.2.4-4",
-      "dotenv": "^8.2.0",
       "idb-keyval": "^3.2.0"
    }
 }
