feature: switch to elm snowpack starter

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-elm-stuff/
-node_modules/
-dist/
-tmux*
-.build
-build*
-web_modules
-node_modules
 .ignored
+.DS_Store
+
+node_modules
+elm-stuff
+
+src/web_modules
+src/elm.js
+
+dist
