--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-   "scripts": {
-      "start": "NODE_ENV=development snowpack dev",
-      "build:dist": "snowpack build",
-      "test": "echo \"This template does not include a test runner by default.\" && exit 1",
-      "format": "prettier --write \"src/**/*.js\"",
-      "lint": "prettier --check \"src/**/*.js\""
-   },
-   "devDependencies": {
-      "@snowpack/plugin-run-script": "^2.2.0",
-      "prettier": "^2.0.5",
-      "snowpack": "^2.17.0",
-      "snowpack-plugin-elm": "^0.4.0",
-      "snowpack-plugin-replace": "^1.0.4"
-   },
-   "dependencies": {
-      "actioncable": "^5.2.4-4",
-      "idb-keyval": "^3.2.0"
-   }
+  "name:": "goban",
+  "version": "1.2",
+  "description": "Elm Go - The Game of Go online",
+  "scripts": {
+    "dev": "run-p dev:*",
+    "dev:snowpack": "snowpack dev",
+    "dev:elm": "nodemon -e elm --exec \"./elm-module.sh src/Main.elm\"",
+    "dev:server": "es-dev-server --root-dir src --node-resolve --watch --open --port 1234",
+    "build": "run-s clean:build build:js build:html build:snowpack build:elm",
+    "build:html": "cp src/index.html dist/index.html",
+    "build:snowpack": "snowpack --config snowpack.prod.js",
+    "build:elm": "./elm-module.sh src/Main.elm && terser src/elm.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' | terser --mangle --output=dist/elm.js && rm -rf src/elm.js",
+    "build:js": "./build-js.sh",
+    "clean:build": "rm -rf src/web_modules dist src/elm.js",
+    "clean:super": "rm -rf src/web_modules dist src/elm.js node_modules elm-stuff"
+  },
+  "devDependencies": {
+    "@snowpack/plugin-run-script": "^2.2.0",
+    "prettier": "^2.0.5",
+    "snowpack": "^2.17.0",
+    "snowpack-plugin-elm": "^0.4.0"
+  },
+  "dependencies": {
+    "actioncable": "^5.2.4-4",
+    "elm": "^0.19.1-3",
+    "elm-analyse": "^0.16.5",
+    "elm-format": "^0.8.4",
+    "elm-test": "^0.19.1-revision4",
+    "es-dev-server": "^1.57.8",
+    "idb-keyval": "^3.2.0",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
+    "terser": "^5.3.8"
+  }
 }
