--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name:": "goban",
-  "version": "1.2",
   "description": "Elm Go - The Game of Go online",
   "scripts": {
     "dev": "run-p dev:*",
@@ -17,20 +16,21 @@
   },
   "devDependencies": {
     "@snowpack/plugin-run-script": "^2.2.0",
-    "prettier": "^2.0.5",
-    "snowpack": "^2.17.0",
-    "snowpack-plugin-elm": "^0.4.0"
-  },
-  "dependencies": {
-    "actioncable": "^5.2.4-4",
     "elm": "^0.19.1-3",
     "elm-analyse": "^0.16.5",
     "elm-format": "^0.8.4",
     "elm-test": "^0.19.1-revision4",
-    "es-dev-server": "^1.57.8",
-    "idb-keyval": "^3.2.0",
+    "elm-tooling": "^0.6.1",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
+    "snowpack": "^2.17.0",
+    "snowpack-plugin-elm": "^0.4.0",
     "terser": "^5.3.8"
+  },
+  "dependencies": {
+    "actioncable": "^5.2.4-4",
+    "es-dev-server": "^1.57.8",
+    "idb-keyval": "^3.2.0"
   }
 }
