--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 .ignored
 .DS_Store
 
@@ -8,3 +9,29 @@ src/web_modules
 src/elm.js
 
 dist*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.devenv
