--- a/package.json
+++ b/package.json
@@ -2,47 +2,33 @@
   "name:": "goban",
   "description": "Elm Go - The Game of Go online",
   "scripts": {
-    "dev": "run-p dev:*",
-    "dev:snowpack": "snowpack dev ",
-    "dev:watch": "bun run watch.js",
-    "build": "run-s clean:build build:js build:elm build:snowpack",
-    "build:snowpack": "snowpack build",
-    "build:elm": "elm make --output=src/elm.js src/Main.elm && ./elm-module.sh src/Main.elm",
-    "build:elmo": "elm make --optimize --output=src/elm.js src/Main.elm && ./elm-module.sh && terser src/elm.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' | terser --mangle --output=src/elm.js",
-    "build:js": "bash build-js.sh",
-    "clean:build": "rm -rf src/web_modules dist src/elm.js",
-    "clean:super": "rm -rf src/web_modules dist src/elm.js node_modules elm-stuff",
-    "upload": "surge dist goban.surge.sh"
+    "postinstall": "elm-tooling install",
+    "dev": "vite",
+    "prebuild": "elm-tooling install",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "elm-review",
+    "test": "elm-test-rs",
+    "upload": "surge build goban.surge.sh"
   },
   "devDependencies": {
-    "@snowpack/plugin-run-script": "^2.2.0",
-    "binwrap": "^0.2.3",
-    "elm": "^0.19.1-3",
-    "elm-analyse": "^0.16.5",
-    "elm-format": "^0.8.4",
-    "elm-test": "^0.19.1-revision4",
-    "elm-tooling": "^0.6.1",
-    "es-dev-server": "^1.57.8",
-    "exec-sh": "^0.3.4",
-    "nodemon": "^2.0.6",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "snowpack": "^2.17.0",
-    "snowpack-plugin-elm": "^0.4.0",
+    "@rollup/plugin-replace": "^5.0.5",
+    "elm-review": "^2.10.2",
+    "elm-tooling": "^1.14.0",
     "surge": "^0.23.1",
-    "terser": "^5.19.1",
-    "watch": "^1.0.2",
-    "zx": "^7.2.3"
+    "vite": "^4.4.9",
+    "vite-plugin-elm": "^2.8.0"
   },
   "dependencies": {
-    "actioncable": "^5.2.4-4",
-    "idb-keyval": "^3.2.0"
+    "actioncable": "^5.2.8-1",
+    "elm-debug-transformer": "^1.2.1",
+    "idb-keyval": "^6.2.1"
   },
   "type": "module",
   "name": "goban",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:sladwig/goban.git",
-  "author": "Stefan Ladwig <koenig.s@gmail.com>",
+  "author": "Stefan Ladwig <l@dwig.dev>",
   "license": "MIT"
 }
